Closed Bug 338741 Opened 18 years ago Closed 18 years ago

"Select Element by Click" doesn't work for elements in content documents of inspected chrome

Categories

(Other Applications :: DOM Inspector, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: neil, Assigned: neil)

Details

(Keywords: fixed1.8.1)

Attachments

(3 files)

Steps to reproduce problem:
1. Inspect a chrome window with a content frame (browser, composer, mail)
2. Try to select an element in content

Expected result: DOM tree is expanded and element is selected.

Actual results: Nothing happens.
Attached patch Proposed patchSplinter Review
It turns out this file already includes nsPIDOMWindow.h so I could have patched it years ago, or if you don't mind I could port the fix to the branch.

Side note: now that DOMI is in layout there looks like scope for more optimization via nsIDocument, nsINode etc.
Assignee: dom-inspector → neil
Status: NEW → ASSIGNED
Attachment #222807 - Flags: superreview?(bzbarsky)
Attachment #222807 - Flags: review?(timeless)
Attachment #222807 - Flags: superreview?(bzbarsky)
Attachment #222807 - Flags: superreview+
Attachment #222807 - Flags: review?(timeless)
Attachment #222807 - Flags: review+
Fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Attached patch Branch portSplinter Review
I can't seem to ask for approval1.8.1 in this product so using r? instead.
Attachment #223939 - Flags: review?(bzbarsky)
Attachment #223939 - Flags: review?(bzbarsky) → review+
Fix checked in to the branch.
Keywords: fixed1.8.1
(In reply to comment #1)
> It turns out this file already includes nsPIDOMWindow.h
Yeah, bug 316794 added it two week ago. On trunk, that is. It isn't included in the 1.8 branch version...
I don't know what I'm doing, but this fixes the bustage. Somebody needs to check this in for me on branch.
Attachment #223974 - Flags: review?(bzbarsky)
Comment on attachment 223974 [details] [diff] [review]
branch bustage fix

Checked in on branch.
(In reply to comment #5)
>(In reply to comment #1)
>>It turns out this file already includes nsPIDOMWindow.h
>On trunk, that is. It isn't included in the 1.8 branch version...
D'oh; thanks for fixing my bustage. I wonder why I didn't notice bug 316794. Maybe because bonsai doesn't quite report everything (e.g. your fix appeared on the SeaMonkey 1.8 branch tinderbox but not on the main 1.8 branch tinderbox).
> Maybe because bonsai doesn't quite report everything (e.g. your fix appeared on
> the SeaMonkey 1.8 branch tinderbox but not on the main 1.8 branch tinderbox).
Are you sure? My checkin appeared both on http://tinderbox.mozilla.org/showbuilds.cgi?tree=Mozilla1.8 and on http://tinderbox.mozilla.org/showbuilds.cgi?tree=Mozilla1.8-SeaMonkey at 2006-05-31 14:56.
Weird; I checked both tinderboxes at the time, which is why I mentioned it.
Comment on attachment 223974 [details] [diff] [review]
branch bustage fix

Yeah, this is the right thing. Thanks for fixing!
Attachment #223974 - Flags: review?(bzbarsky) → review+
QA Contact: timeless → dom-inspector
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: