Bug 338741 Make it possible for DOM Inspector to select an element by click in a content document of the inspected chrome r+sr=bz